core/grammar.txt
statements			:	NEWLINE* statement (NEWLINE+ statement)* NEWLINE*

statement			:	import-statement
					:	KEYWORD:RETURN expr?
					:	KEYWORD:CONTINUE
					:	KEYWORD:BREAK
					:	expr 

import-statement	: HASH KEYWORD:IMPORT STRING KEYWORD:AS IDENTIFIER

expr				:	KEYWORD:VAR IDENTIFIER EQ expr
					:	comp-expr ((KEYWORD:AND|KEYWORD:OR)comp-expr)*

comp-epr			:	NOT comp-expr
					:	arith-expr ((EQEQ|LT|GT|LTEQ|GTEQ) arith-expr)*

arith-expr			:	term((PLUS|MINUS) term)*

term				:	factor((MUL|DIV|AT) factor)*

factor				:	(PLUS|MINUS) factor
					:	power

power				:	call (POW factor)*

call				:	atom (LPARAM (expr (COMMA expr)*)? RPARAM)?

atom				:	INT|FLOAT|STRING|IDENTIFIER
					:	IDENTIFIER (DBLCONON IDENTIFIER)?
					:	LPAREN expr RPAREN
					:	list-expr
					:	if-expr
					:	for-expr
					:	while-expr
					:	func-def

list-expr			:	LSQUARE (expr (COMMA expr)*)? RSQUARE

if-expr				:	KEYWORD:IF expr KEYWORD:THEN
						(statement if-expr-b| if-expr-c?)
					|	(NEWLINE statements RCURLYBRACKET|if-expr-b| if-expr-c)

if-expr-b			:	KEYWORD:ELIF expr KEYWORD:THEN
						(statement if-expr-b| if-expr-c?)
					|	(NEWLINE statements RCURLYBRACKET|if-expr-b| if-expr-c)

if-expr-c			:	KEYWORD:ELSE
						statement
					|	(NEWLINE statements RCURLYBRACKET)

for-expr			:	KEYWORD:FOR IDENTIFIER EQ expr KEYWORD:TO expr
						(KEYWORD:STEP)? KEYWORD:THEN
						statement
					|	(NEWLINE statements RCURLYBRACKET)

while-expr			:	KEYWORD:WHILE expr KEYWORD:THEN
						statement
					|	(NEWLINE statements RCURLYBRACKET)

func-def			:	KEYWORD:FUNC IDENTIFIER?
						LPARAM (IDENTIFIER (COMMA IDENTIFIER)*)? RPERAM
						(ARROW expr)
					|	(NEWLINE statements RCURLYBRACKET)
