core/src/Parser.cpp
#include "Parser.hpp"
#include <algorithm>

Parser::Parser(std::vector<Token> tokens)
{
	this->tokens = tokens;
	Advance();
}

Token Parser::Advance()
{
	tokIdx++;
	UpdateCurrentToken();

	return currentToken;
}

Token Parser::Reverse(int amount)
{
	tokIdx -= amount;
	UpdateCurrentToken();

	return currentToken;
}

Token Parser::Peek(int offset)
{
    if (tokIdx + offset < tokens.size())
		return tokens[tokIdx + offset];
	return currentToken; // Return current token when out-of bounds
}

void Parser::UpdateCurrentToken()
{
	if (tokIdx >= 0 && tokIdx < tokens.size())
		currentToken = tokens[tokIdx];
}

ParseResult Parser::Parse()
{
	//std::cout << "Parse!" << std::endl;
	ParseResult res = Statements();
	if (!res.HasError() && currentToken.GetType() != TT_EOF)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '+', '-', '*' or '/'"));
	return res;
}

ParseResult Parser::Statements()
{
	ParseResult res;
	std::vector<std::shared_ptr<Node>> statements;
	Position posStart = currentToken.GetPosStart().Copy();

	while (currentToken.GetType() == TT_NEWLINE)
	{
		Advance();
		res.RegisterAdvancement();
	}

	std::optional<std::shared_ptr<Node>> statement = res.Register(Statement());
	if (res.HasError())
		return res;

	statements.push_back(statement.value());

	bool moreStatements = true;

	while (true)
	{
		int newLineCount = 0;

		while (currentToken.GetType() == TT_NEWLINE)
		{
			Advance();
			res.RegisterAdvancement();
			newLineCount++;
		}
		if (newLineCount == 0)
			moreStatements = false;

		if (!moreStatements)
			break;

		statement = res.TryRegister(Statement());
		if (!statement.has_value())
		{
			Reverse(res.GetToReverseCount());
			moreStatements = false;
			continue;
		}

		statements.push_back(statement.value());
	}

	if (statements.size() == 1)
		return res.Success(statements[0]);
	else
		return res.Success(std::make_unique<ListNode>(statements, posStart, currentToken.GetPosEnd().Copy()));
}

ParseResult Parser::Statement()
{
	ParseResult res;
	Position posStart = currentToken.GetPosStart().Copy();

	if (currentToken.Matches(TT_KEYWORD, "return"))
	{
		Advance();
		res.RegisterAdvancement();

		std::optional<std::shared_ptr<Node>> expr = res.TryRegister(Expr());
		if (!expr.has_value())
			Reverse(res.GetToReverseCount());
		return res.Success(std::make_unique<ReturnNode>(expr, posStart, currentToken.GetPosEnd().Copy()));
	}

	if (currentToken.Matches(TT_KEYWORD, "continue"))
	{
		Advance();
		res.RegisterAdvancement();

		return res.Success(std::make_unique<ContinueNode>(posStart, currentToken.GetPosEnd().Copy()));
	}

	if (currentToken.Matches(TT_KEYWORD, "break"))
	{
		Advance();
		res.RegisterAdvancement();

		return res.Success(std::make_unique<BreakNode>(posStart, currentToken.GetPosEnd().Copy()));
	}

	if (currentToken.GetType() == TT_HASH)
	{
		std::shared_ptr<Node> importStatement = res.Register(ModuleExternLinkStatement());
		if (res.HasError())
			return res;

		return res.Success(importStatement);
	}

	std::shared_ptr<Node> expr = res.Register(Expr());
	if (res.HasError())
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected int, float, identifier, var, '+', '-', '(', '[', 'if', 'for', 'while', 'func', 'return', 'continue', 'break' or not"));

	return res.Success(expr);
}

ParseResult Parser::ModuleExternLinkStatement()
{
	ParseResult res;
	Position posStart = currentToken.GetPosStart().Copy();
	bool link = false;

	Advance();
	res.RegisterAdvancement();

	if (currentToken.Matches(TT_KEYWORD, "module"))
		link = false;
	else if (currentToken.Matches(TT_KEYWORD, "link"))
		link = true;
	else if (currentToken.Matches(TT_KEYWORD, "extern"))
	{
		std::shared_ptr<Node> externNode = res.Register(ExternStatement());
		if (res.HasError()) return res;
		return res.Success(externNode);
	}
	else
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'module', 'link' or 'extern'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_STRING)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected string for file path"));

	Token filepathToken = currentToken;

	Advance();
	res.RegisterAdvancement();

	if (!currentToken.Matches(TT_KEYWORD, "as"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'as'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_IDENTIFIER)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier as alias"));

	std::string alias = std::get<std::string>(currentToken.GetValue());

	Advance();
	res.RegisterAdvancement();

	if (!link)
		return res.Success(std::make_unique<ModuleNode>(filepathToken, alias, posStart, currentToken.GetPosEnd().Copy()));
	else
		return res.Success(std::make_unique<LinkNode>(filepathToken, alias, posStart, currentToken.GetPosEnd().Copy()));
}

ParseResult Parser::ExternStatement()
{
	ParseResult res;
	Position posStart = currentToken.GetPosStart().Copy();

	if (!currentToken.Matches(TT_KEYWORD, "extern"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'extern'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_IDENTIFIER)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected module name identifier"));

	std::string moduleAlias = std::get<std::string>(currentToken.GetValue());

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_DBLCOLON)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '::' after module name"));

	Advance(),
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_IDENTIFIER)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected function name identifier after '::'"));

	std::string functionName = std::get<std::string>(currentToken.GetValue());

	Advance();
	res.RegisterAdvancement();

	if (!currentToken.Matches(TT_KEYWORD, "as"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'as'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_STRING)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected signature string like \"int(int, int)\""));

	std::string signature = std::get<std::string>(currentToken.GetValue());

	Advance();
	res.RegisterAdvancement();

	return res.Success(std::make_unique<ExternNode>(moduleAlias, functionName, signature, posStart, currentToken.GetPosEnd().Copy()));
}

ParseResult Parser::Expr()
{
	ParseResult res;

	// Handle var declaration
	if (currentToken.Matches(TT_KEYWORD, "var"))
	{
		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() != TT_IDENTIFIER)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier"));

		Token varName = currentToken;

		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() != TT_EQ)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '='"));

		Advance();
		res.RegisterAdvancement();
		auto expr = res.Register(Expr());

		if (res.HasError())
			return res;
		else
			return res.Success(std::make_shared<VarAssignNode>(varName, expr, true, std::nullopt));
	}

	// Handle assignment
	if (currentToken.GetType() == TT_IDENTIFIER && Peek().GetType() == TT_EQ)
	{
		Token varName = currentToken;

		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() != TT_EQ)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '='"));

		Advance();
		res.RegisterAdvancement();

		auto expr = res.Register(Expr());

		if (res.HasError())
			return res;
		else
			return res.Success(std::make_shared<VarAssignNode>(varName, expr, false, std::nullopt));
	}

	std::vector<std::pair<std::string, std::string>> ops = {
	{ TT_KEYWORD, "and"},
	{ TT_KEYWORD, "or"}
	};
	std::shared_ptr<Node> node = res.Register(BinOp([this]() {return CompExpr(); }, ops));

	if (res.HasError())
	{
		if (res.GetAdvancementCount() == 0 && !res.GetErrorPtr())
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(),"Expected int, float, identifier, var, '+', '-', '(', '[', 'if', 'for', 'while', 'func' or not"));
		return res;
	}

	return res.Success(node);
}

ParseResult Parser::CompExpr()
{
	ParseResult res;

	if (currentToken.Matches(TT_KEYWORD, "not"))
	{
		Token opToken = currentToken;

		Advance();
		res.RegisterAdvancement();

		std::shared_ptr<Node> node = res.Register(CompExpr());

		if (res.HasError())
			return res;

		return res.Success(std::make_shared<UnaryOpNode>(opToken, node));
	}

	std::vector<std::string> ops = { TT_EQEQ, TT_NEQ, TT_LT, TT_GT, TT_LTEQ, TT_GTEQ };
	std::shared_ptr<Node> node = res.Register(BinOp([this]() {return ArithExpr(); }, ops));

	if (res.HasError())
	{
		if (res.GetAdvancementCount() == 0 && !res.GetErrorPtr())
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected int, float, identifier, var, '+', '-', '(', '[' or 'not'"));
		return res;
	}

	return res.Success(node);
}

ParseResult Parser::ArithExpr()
{
	std::vector<std::string> ops = { TT_PLUS, TT_MINUS, TT_AT };
	return BinOp([this]() {return Term(); }, ops);
}

ParseResult Parser::Term()
{
	std::vector<std::string> ops = { TT_MUL, TT_DIV, TT_MOD };
	return BinOp([this]() {return Factor(); }, ops);
}

ParseResult Parser::Factor()
{
	ParseResult res = ParseResult();
	Token tok = currentToken;

	if (tok.GetType() == TT_PLUS || tok.GetType() == TT_MINUS)
	{
		Advance();
		res.RegisterAdvancement();
		std::shared_ptr<Node> factor = res.Register(Factor());
		if (res.HasError())
			return res;
		return res.Success(std::make_shared<UnaryOpNode>(tok, factor));
	}

	return Power();
}

ParseResult Parser::Power()
{
	std::vector<std::string> ops = { TT_POW };
	return BinOp([this]() {return Call(); }, ops, [this]() {return Factor(); });
}

ParseResult Parser::Call()
{
	ParseResult res;

	std::shared_ptr<Node> atom = res.Register(Atom());
	if (res.HasError())
		return res;

	if (currentToken.GetType() == TT_LPAREN)
	{
		Advance();
		res.RegisterAdvancement();
		
		std::vector<std::shared_ptr<Node>> argNodes;

		if (currentToken.GetType() == TT_RPAREN)
		{
			Advance();
			res.RegisterAdvancement();
		}
		else
		{
			argNodes.push_back(res.Register(Expr()));
			if (res.HasError())
				return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ')', 'var', 'if', 'for', 'while', 'func', 'int', 'float', identifier, '+', '-', '(', '[' or 'not'"));

			while (currentToken.GetType() == TT_COMMA)
			{
				Advance();
				res.RegisterAdvancement();

				argNodes.push_back(res.Register(Expr()));
				if (res.HasError())
					return res;
			}

			if (currentToken.GetType() != TT_RPAREN)
				return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ',' or ')'"));

			Advance();
			res.RegisterAdvancement();
		}

		return res.Success(std::make_shared<CallNode>(atom, argNodes));
	}

	return res.Success(atom);
}

ParseResult Parser::Atom()
{
	ParseResult res = ParseResult();
	Token tok = currentToken;

	if (tok.GetType() == TT_INT || tok.GetType() == TT_FLOAT)
	{
		Advance();
		res.RegisterAdvancement();
		return res.Success(std::make_shared<NumberNode>(tok));
	}
	else if (tok.GetType() == TT_STRING)
	{
		Advance();
		res.RegisterAdvancement();
		return res.Success(std::make_shared<StringNode>(tok));
	}
	else if (tok.GetType() == TT_IDENTIFIER)
	{
		Advance();
		res.RegisterAdvancement();
		
		Token varNameTok = tok;

		// Handle Test::func1 and Test::varA = 100 pattern
		if (currentToken.GetType() == TT_DBLCOLON)
		{
			Advance();
			res.RegisterAdvancement();

			if (currentToken.GetType() != TT_IDENTIFIER)
				return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier after '::'"));

			std::optional<std::string> namespaceName = std::get<std::string>(varNameTok.GetValue());
			varNameTok = currentToken;

			Advance();
			res.RegisterAdvancement();

			if (currentToken.GetType() != TT_EQ)
				res.Success(std::make_unique<VarAccessNode>(varNameTok, namespaceName));
			else // Handle var assignment through namespace
			{
				Advance();
				res.RegisterAdvancement();

				auto expr = res.Register(Expr());

				if (res.HasError())
					return res;
				else
					return res.Success(std::make_shared<VarAssignNode>(varNameTok, expr, false, namespaceName));
			}
		}

		return res.Success(std::make_unique<VarAccessNode>(varNameTok, std::nullopt));
	}
	else if (tok.GetType() == TT_LPAREN)
	{
		Advance();
		res.RegisterAdvancement();
		std::shared_ptr<Node> expr = res.Register(Expr());
		if (res.HasError())
			return res;
		if (currentToken.GetType() == TT_RPAREN)
		{
			Advance();
			res.RegisterAdvancement();
			return res.Success(expr);
		}
		else
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ')'"));
	}
	else if (tok.GetType() == TT_LSQUARE)
	{
		std::shared_ptr<Node> listExpr = res.Register(ListExpr());
		if (res.HasError())
			return res;

		return res.Success(listExpr);
	}
	else if (tok.Matches(TT_KEYWORD, "if"))
	{
		std::shared_ptr<Node> ifExpr = res.Register(IfExpr());
		if (res.HasError())
			return res;
		return res.Success(ifExpr);
	}
	else if (tok.Matches(TT_KEYWORD, "for"))
	{
		std::shared_ptr<Node> forExpr = res.Register(ForExpr());
		if (res.HasError())
			return res;
		return res.Success(forExpr);
	}
	else if (tok.Matches(TT_KEYWORD, "while"))
	{
		std::shared_ptr<Node> whileExpr = res.Register(WhileExpr());
		if (res.HasError())
			return res;
		return res.Success(whileExpr);
	}
	else if (tok.Matches(TT_KEYWORD, "func"))
	{
		std::shared_ptr<Node> funcDef = res.Register(FuncDef());
		if (res.HasError())
			return res;
		return res.Success(funcDef);
	}
	else if (tok.Matches(TT_KEYWORD, "CSTRUCT"))
	{
		std::shared_ptr<Node> structDef = res.Register(CStructDef());
		if (res.HasError())
			return res;
		return res.Success(structDef);
	}

	return res.Failure(std::make_unique<InvalidSyntaxError>(tok.GetPosStart(), tok.GetPosEnd(), "Expected int, float, identifier, '+', '-', '(', '[', 'if', 'for', 'while', 'func' or 'CSTRUCT'"));
}

ParseResult Parser::ListExpr()
{
	ParseResult res;
	std::vector<std::shared_ptr<Node>> elementNodes;
	Position posStart = currentToken.GetPosStart().Copy();

	if (currentToken.GetType() != TT_LSQUARE)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '['"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() == TT_RSQUARE)
	{
		Advance();
		res.RegisterAdvancement();
	}
	else
	{
		elementNodes.push_back(res.Register(Expr()));
		if (res.HasError())
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ']', 'var', 'if', 'for', 'while', 'func', 'int', 'float', identifier, '+', '-', '(', '[' or 'not'"));

		while (currentToken.GetType() == TT_COMMA)
		{
			Advance();
			res.RegisterAdvancement();

			elementNodes.push_back(res.Register(Expr()));
			if (res.HasError())
				return res;
		}

		if (currentToken.GetType() != TT_RSQUARE)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ',' or ']'"));

		Advance();
		res.RegisterAdvancement();
	}

	return res.Success(std::make_unique<ListNode>(elementNodes, posStart, currentToken.GetPosEnd().Copy()));
}

ParseResult Parser::IfExpr()
{
	ParseResult res;
	CasesResult result;
	res.Register(IfExprCases("if", result));
	if (res.HasError()) return res;

	return res.Success(std::make_shared<IfNode>(result.cases, result.elseCase));
}

ParseResult Parser::IfExprB()
{
	CasesResult dummyResult;
	return IfExprCases("elif", dummyResult);
}

ParseResult Parser::IfExprC(std::shared_ptr<IfCase>& outElseCase)
{
	ParseResult res;

	if (currentToken.Matches(TT_KEYWORD, "else"))
	{
		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() == TT_NEWLINE)
		{
			Advance();
			res.RegisterAdvancement();

			std::shared_ptr<Node> statements = res.Register(Statements());
			if (res.HasError())
				return res;

			outElseCase = std::make_shared<IfCase>(nullptr, statements, true);

			if (currentToken.GetType() == TT_RCURLYBRACKET)
			{
				Advance();
				res.RegisterAdvancement();
			}
			else
				return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '}'"));
		}
		else
		{
			std::shared_ptr<Node> expr = res.Register(Statement());
			if (res.HasError())
				return res;

			outElseCase = std::make_shared<IfCase>(nullptr, expr, false);
		}
	}
	else
	{
		outElseCase = nullptr;
	}

	return res.Success(nullptr);
}

ParseResult Parser::IfExprBorC(CasesResult& outResult)
{
	ParseResult res;

	if (currentToken.Matches(TT_KEYWORD, "elif"))
	{
		res.Register(IfExprCases("elif", outResult));
		if (res.HasError())
			return res;
	}
	else
	{
		std::shared_ptr<IfCase> elseCase;
		res.Register(IfExprC(elseCase));
		if (res.HasError())
			return res;

		if (elseCase)
			outResult.elseCase = std::make_shared<IfNode>(std::vector<IfCase>{ *elseCase }, nullptr);
		else
			outResult.elseCase = nullptr;
	}

	return res.Success(nullptr);
}

ParseResult Parser::IfExprCases(std::string caseKeyword, CasesResult& outResult)
{
	ParseResult res;
	std::vector<IfCase> cases;
	std::shared_ptr<Node> elseCase;

	if (!currentToken.Matches(TT_KEYWORD, caseKeyword))
		return res.Failure(std::make_unique<InvalidSyntaxError>(
			currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '" + caseKeyword + "'"));

	Advance();
	res.RegisterAdvancement();

	std::shared_ptr<Node> condition = res.Register(Expr());
	if (res.HasError()) return res;

	if (!currentToken.Matches(TT_KEYWORD, "then"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(
			currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'then'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() == TT_NEWLINE)
	{
		Advance();
		res.RegisterAdvancement();

		std::shared_ptr<Node> body = res.Register(Statements());
		if (res.HasError()) return res;

		cases.push_back(IfCase(condition, body, true));

		if (currentToken.GetType() != TT_RCURLYBRACKET)  // End of block
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '}'"));

		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() == TT_NEWLINE && !Peek().Matches(TT_KEYWORD, "if	"))
		{
			Advance();
			res.RegisterAdvancement();
		}

		if (currentToken.Matches(TT_KEYWORD, "elif") || currentToken.Matches(TT_KEYWORD, "else"))
		{
			CasesResult subCases;
			res.Register(IfExprBorC(subCases));
			if (res.HasError()) return res;

			cases.insert(cases.end(), subCases.cases.begin(), subCases.cases.end());
			elseCase = subCases.elseCase;
		}
	}
	else
	{
		std::shared_ptr<Node> expr = res.Register(Statement());
		if (res.HasError()) return res;

		cases.push_back(IfCase(condition, expr, false));

		// Only continue chain if next token id elif or else	
		if (currentToken.Matches(TT_KEYWORD, "elif") || currentToken.Matches(TT_KEYWORD, "else"))
		{
			CasesResult subCases;
			res.Register(IfExprBorC(subCases));
			if (res.HasError()) return res;

			cases.insert(cases.end(), subCases.cases.begin(), subCases.cases.end());
			elseCase = subCases.elseCase;
		}
	}

	outResult.cases.insert(outResult.cases.end(), cases.begin(), cases.end());
	outResult.elseCase = elseCase;
	return res.Success(nullptr);
}

ParseResult Parser::ForExpr()
{
	ParseResult res;

	if (!currentToken.Matches(TT_KEYWORD, "for"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'for'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_IDENTIFIER)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier"));

	Token varName = currentToken;

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_EQ)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '='"));

	Advance();
	res.RegisterAdvancement();

	std::shared_ptr<Node> startValue = res.Register(Expr());
	if (res.HasError())
		return res;

	if (!currentToken.Matches(TT_KEYWORD, "to"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'to'"));

	Advance();
	res.RegisterAdvancement();

	std::shared_ptr<Node> endValue = res.Register(Expr());
	if (res.HasError())
		return res;

	std::shared_ptr<Node> stepValue;
	if (currentToken.Matches(TT_KEYWORD, "step"))
	{
		Advance();
		res.RegisterAdvancement();
		stepValue = res.Register(Expr());
		if (res.HasError())
			return res;
	}
	else
		stepValue = nullptr;

	if (!currentToken.Matches(TT_KEYWORD, "then"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'then'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() == TT_NEWLINE)
	{
		Advance();
		res.RegisterAdvancement();

		std::shared_ptr<Node> body = res.Register(Statements());
		if (res.HasError())
			return res;

		if (currentToken.GetType() != TT_RCURLYBRACKET)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '}'"));

		Advance();
		res.RegisterAdvancement();

		return res.Success(std::make_unique<ForNode>(varName, startValue, endValue, stepValue, body, true));
	}

	std::shared_ptr<Node> body = res.Register(Statement());
	if (res.HasError())
		return res;

	return res.Success(std::make_shared<ForNode>(varName, startValue, endValue, stepValue, body, false));
}

ParseResult Parser::WhileExpr()
{
	ParseResult res;

	if (!currentToken.Matches(TT_KEYWORD, "while"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'while'"));

	Advance();
	res.RegisterAdvancement();

	std::shared_ptr<Node> condition = res.Register(Expr());
	if (res.HasError())
		return res;

	if (!currentToken.Matches(TT_KEYWORD, "then"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'then'"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() == TT_NEWLINE)
	{
		Advance();
		res.RegisterAdvancement();

		std::shared_ptr<Node> body = res.Register(Statements());
		if (res.HasError())
			return res;

		if (currentToken.GetType() != TT_RCURLYBRACKET)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '}'"));

		Advance();
		res.RegisterAdvancement();

		return res.Success(std::make_shared<WhileNode>(condition, body, true));
	}

	std::shared_ptr<Node> body = res.Register(Statement());
	if (res.HasError())
		return res;

	return res.Success(std::make_shared<WhileNode>(condition, body, false));
}

ParseResult Parser::FuncDef()
{
	ParseResult res;

	if (!currentToken.Matches(TT_KEYWORD, "func"))
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'func'"));

	Advance();
	res.RegisterAdvancement();

	std::optional<Token> varNameTok;
	if (currentToken.GetType() == TT_IDENTIFIER)
	{
		varNameTok = currentToken;

		Advance();
		res.RegisterAdvancement();

		if (currentToken.GetType() != TT_LPAREN)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '('"));
	}
	else
	{
		varNameTok = std::nullopt;

		if (currentToken.GetType() != TT_LPAREN)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier or '('"));
	}

	Advance();
	res.RegisterAdvancement();
	
	bool argByReference = false;
	std::vector<ArgNameToken> argNameToks;

	if (currentToken.Matches(TT_KEYWORD, "ref"))
	{
		argByReference = true;

		Advance();
		res.RegisterAdvancement();
	}

	if (currentToken.GetType() == TT_IDENTIFIER)
	{
		argNameToks.push_back(ArgNameToken(currentToken, argByReference));

		Advance();
		res.RegisterAdvancement();

		while (currentToken.GetType() == TT_COMMA)
		{
			Advance();
			res.RegisterAdvancement();

			argByReference = false;

			if (currentToken.Matches(TT_KEYWORD, "ref"))
			{
				argByReference = true;

				Advance();
				res.RegisterAdvancement();
			}

			if (currentToken.GetType() != TT_IDENTIFIER)
				return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier"));

			argNameToks.push_back(ArgNameToken(currentToken, argByReference));

			Advance();
			res.RegisterAdvancement();
		}

		if (currentToken.GetType() != TT_RPAREN)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected ',' or ')'"));

		Advance();
		res.RegisterAdvancement();
	}
	else if (currentToken.GetType() == TT_RPAREN)
	{
		Advance();
		res.RegisterAdvancement();
	}
	else
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier or ')'"));

	if (currentToken.GetType() == TT_ARROW)
	{
		Advance();
		res.RegisterAdvancement();

		std::shared_ptr<Node> nodeToReturn = res.Register(Expr());
		if (res.HasError())
			return res;

		return res.Success(std::make_shared<FuncDefNode>(varNameTok, argNameToks, nodeToReturn, true));
	}
	
	if (currentToken.GetType() != TT_NEWLINE)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '->' or NEWLINE"));

	Advance();
	res.RegisterAdvancement();

	std::shared_ptr<Node> body = res.Register(Statements());
	if (res.HasError())
		return res;

	if (currentToken.GetType() != TT_RCURLYBRACKET)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected '}'"));

	Advance();
	res.RegisterAdvancement();

	return res.Success(std::make_shared<FuncDefNode>(varNameTok, argNameToks, body, false));
}

ParseResult Parser::CStructDef()
{
	ParseResult res;

	if (!currentToken.Matches(TT_KEYWORD, "CSTRUCT"))
		res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected 'CSTRUCT'"));

	Advance();
	res.RegisterAdvancement();

	Token varNameTok;
	if (currentToken.GetType() == TT_IDENTIFIER)
		varNameTok = currentToken;
	else
		res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected identifier"));

	Advance();
	res.RegisterAdvancement();

	if (currentToken.GetType() != TT_NEWLINE)
		return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected NEWLINE"));

	Advance();
	res.RegisterAdvancement();

	std::vector<CStructAttributeToken> attributeToks;

	while (currentToken.GetType() == TT_IDENTIFIER)
	{
		std::string attributeType = "";
		std::string attributeName = "";

		if (currentToken.GetType() != TT_IDENTIFIER)
			return res.Failure(std::make_unique<InvalidSyntaxError>(currentToken.GetPosStart(), currentToken.GetPosEnd(), "Expected type as identifier"));
		else
			attributeType = std::get<std::string>(currentToken.GetValue());
